--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -88,11 +88,11 @@
 					</div>
 				</div>
 				
-				<span class='gun gunBefore'><img src='pictures/shield.png'></span>
-				<span class='gun gunBefore'><img src='pictures/shield.png'></span>
-				<span class='gun gunBefore'><img src='pictures/shield.png'></span>
-				<span class='gun gunBefore'><img src='pictures/shield.png'></span>
-				<span class='gun gunBefore'><img src='pictures/shield.png'></span>
+				<span class='gun gunBefore'><img src='pictures/shield.png' style="max-height: 100%; max-width:100%;"></span>
+				<span class='gun gunBefore'><img src='pictures/shield.png' style="max-height: 100%; max-width:100%;"></span>
+				<span class='gun gunBefore'><img src='pictures/shield.png' style="max-height: 100%; max-width:100%;"></span>
+				<span class='gun gunBefore'><img src='pictures/shield.png' style="max-height: 100%; max-width:100%;"></span>
+				<span class='gun gunBefore'><img src='pictures/shield.png' style="max-height: 100%; max-width:100%;"></span>
 			</div>
 		</div>
 		<div id="div2Resize">
